kubernetes/deployment/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: currency-operations.all
    http:
      paths:
      - path: /currency-conversion
        pathType: Prefix
        backend:
          service:
            name: currency-conversion
            port:
              number: 8100
      - path: /currency-exchange
        pathType: Prefix
        backend:
          service:
            name: currency-exchange
            port:
              number: 8000
